--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 									<br>
 								</li>
 								<li class="button3">
-									<a href="https://ghdwn3103.github.io/gijangcenter/index.html" target="_blank">https://ghdwn3103.github.io/gijangcenter/index.html</a>
+									<a href="https://ghdwn3103.github.io/senior/" target="_blank">https://ghdwn3103.github.io/senior/</a>
 								</li>
 							</ul>
 						</div>
