--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 									사용하기 편리한 사이트로 리뉴얼
 								</li>
 								<li class="button3">
-									<a href="http://kyng1916.dothome.co.kr/sidiz_Team_Project/" target="_blank">http://kyng1916.dothome.co.kr/sidiz_Team_Project/</a>
+									<a href="http://sungwook6546.cafe24.com/" target="_blank">http://sungwook6546.cafe24.com/</a>
 								</li>
 							</ul>
 						</div>
